# django-lexpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
django_lexpy/: apps.py
django_lexpy/commands/: lexpy.py
django_lexpy/commands/sample_files/: init_sample  messages_sample
django_lexpy/templatetags/: lexpy.py  utils.py
